syntax = "proto3";
package furynetwork.fury.bet;

option go_package = "github.com/furynet/fury/x/bet/types";

// BetStats is the type of statistics of the betting in the blockchain state.
message BetStats {
  // count is the total count of bets.
  uint64 count = 1;
}
